--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/img/portoLogo/iconPorto.ico." />
+    <link rel="icon" type="image/svg+xml" href="public/img/portoLogo/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/estilo.css">
-    <title>DIAGNOSCAR</title>
+    <title>Diagnoscar</title>
   </head>
   <body>
     <div id="root"></div>
